fixed header and footer and text alignment issues on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,17 @@
     <img src="http://lorempixel.com/400/200/sports/1" alt="random picture 4" id="picture4">
     <img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt="random picture 5" id="picture5">
     
-<div class="hangman">Hangman</div>
+<p class="hangman">Hangman</p>
 
-<div class="rpgGame">RPG Game</div>
+<div class="rpgGame">RPG Game </div>
 
-<div class="triviaGame">Trivia Game</div>
+<div class="triviaGame">Trivia Game </div>
 
-<div class="rutgers"> Rutgers Info Widget</div>
+<div class="rutgers"> Info Widget </div>
 
-<div class="rock">Rock Paper Scissors</div>
+<div class="rock"> Rock Paper Scissors </div>
 
-</div>
+</div> 
 </body>
 <br>
 <br>
